plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.6'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'pmd'
    id 'idea'
    id 'eclipse'
}

group = 'com.haihoan2874'
version = '1.0.0'
description = 'S-Life Backend - Spring Boot e-commerce API for smart health devices.'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Hot Reload Development Tool
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Database
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway Migration
    implementation 'org.flywaydb:flyway-core:10.11.0'
    implementation 'org.flywaydb:flyway-database-postgresql:10.11.0'

    // JWT
    implementation 'com.auth0:java-jwt:4.5.0'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Swagger / OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Configure MapStruct annotation processor
compileJava {
    options.annotationProcessorPath = configurations.annotationProcessor
}

// Enable continuous compilation for hot reload
tasks.register('compileJavaContinuous') {
    doLast {
        println "Watching for changes... Press Ctrl+C to stop"
    }
}

// PMD Configuration
pmd {
    ignoreFailures = true
    ruleSetFiles = files("${rootDir}/config/pmd/ruleset.xml")
    consoleOutput = true
}

tasks.register('pmdAll') {
    dependsOn 'pmdMain', 'pmdTest'
    doLast {
        println "PMD analysis completed!"
    }
}
